Source/WebCore/DerivedSources.make
@@ -1589,6 +1589,7 @@ MODERN_MEDIA_CONTROLS_SCRIPTS = \
     $(WebCore)/Modules/modern-media-controls/gesture-recognizers/tap.js \
     $(WebCore)/Modules/modern-media-controls/gesture-recognizers/pinch.js \
     $(WebCore)/Modules/modern-media-controls/controls/scheduler.js \
+    $(WebCore)/Modules/modern-media-controls/controls/layout-traits.js \
     $(WebCore)/Modules/modern-media-controls/controls/layout-node.js \
     $(WebCore)/Modules/modern-media-controls/controls/layout-item.js \
     $(WebCore)/Modules/modern-media-controls/controls/icon-service.js \
@@ -1617,14 +1618,17 @@ MODERN_MEDIA_CONTROLS_SCRIPTS = \
     $(WebCore)/Modules/modern-media-controls/controls/background-click-delegate-notifier.js \
     $(WebCore)/Modules/modern-media-controls/controls/inline-media-controls.js \
     $(WebCore)/Modules/modern-media-controls/controls/ios-inline-media-controls.js \
+    $(WebCore)/Modules/modern-media-controls/controls/ios-layout-traits.js \
     $(WebCore)/Modules/modern-media-controls/controls/macos-inline-media-controls.js \
     $(WebCore)/Modules/modern-media-controls/controls/macos-fullscreen-media-controls.js \
+    $(WebCore)/Modules/modern-media-controls/controls/macos-layout-traits.js \
     $(WebCore)/Modules/modern-media-controls/controls/placard.js \
     $(WebCore)/Modules/modern-media-controls/controls/airplay-placard.js \
     $(WebCore)/Modules/modern-media-controls/controls/invalid-placard.js \
     $(WebCore)/Modules/modern-media-controls/controls/pip-placard.js \
     $(WebCore)/Modules/modern-media-controls/controls/watchos-activity-indicator.js \
     $(WebCore)/Modules/modern-media-controls/controls/watchos-media-controls.js \
+    $(WebCore)/Modules/modern-media-controls/controls/watchos-layout-traits.js \
     $(WebCore)/Modules/modern-media-controls/media/media-controller-support.js \
     $(WebCore)/Modules/modern-media-controls/media/airplay-support.js \
     $(WebCore)/Modules/modern-media-controls/media/audio-support.js \
